--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -2,19 +2,36 @@
 
 {% block title %}My Blog{% endblock %}
 {% block content %}
-	<h1>My posts</h1>
-	<hr>
-	{% for post in posts %}
-		<h2>
-			<a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-		</h2>
-		<p class="date">
-			Published {{ post.publish }} by {{ post.author }}
-		</p>
-		<p>
-			{{ post.body|truncatewords:20|linebreaks }}
-		</p>
-	{% endfor %}
+	<div class="container">
+		<h1>My posts</h1>
 
-	{% include 'blog/partials/pagination.html' with page=page_obj %}
+		<hr>
+		{% if tag %}
+			<h2>Posts tagged with "{{ tag.name }}"</h2>
+		{% endif %}
+
+
+		{% for post in posts %}
+			<h2>
+				<a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+			</h2>
+			<p class="tags">
+				Tags:
+				{% for tag in post.tags.all %}
+					<a href="{% url "blog:post_list_by_tag" tag.slug %}">
+					{{ tag.name }}
+					</a>
+					{% if not forloop.last %}, {% endif %}
+				{% endfor %}
+			</p>
+			<p class="date">
+				Published {{ post.publish }} by {{ post.author }}
+			</p>
+			<p>
+				{{ post.body|truncatewords:20|linebreaks }}
+			</p>
+		{% endfor %}
+
+		{% include 'blog/partials/pagination.html' with page=posts %}
+	</div>
 {% endblock %}
