--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -13,12 +14,26 @@
 	<div class="row">
 	<div class="col-md-4">
 		<div class="jumbotron">
-			<h2>My blog</h2>
+			<h2><a href="{% url 'blog:post_list' %}">My Blog</a></h2>
 			<p>This is my blog</p>
+			<p>This is my blog. I've written {% total_posts %} posts so far.</p>
+			<h3>Latest posts</h3>
+			{% show_latest_posts 3 %}
+			<h3>Most commented posts</h3>
+			{% show_most_comment_posts as most_commented_posts %}
+			<ul>
+				{% for post in most_commented_posts %}
+					<li>
+					<a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+					</li>
+				{% endfor %}
+			</ul>
+			<p>
+				<a href="{% url "blog:post_feeds" %}">Subscribe to my RSS feed</a>
+			</p>
 		</div>
 	</div>
 	<div class="col-md-8 mt-3">
-
 		{% block content %}
 		{% endblock %}
 	</div>
